Web Service tutorial Update

--- a/WebServiceTutorial/app/src/main/res/layout/activity_login.xml
+++ b/WebServiceTutorial/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.webservicetutorial.LoginViewModel" />
+            type="com.example.webservicetutorial.auth.LoginViewModel" />
     </data>
 
 <androidx.coordinatorlayout.widget.CoordinatorLayout
