--- a/WebServiceTutorial/app/src/main/res/layout/activity_login.xml
+++ b/WebServiceTutorial/app/src/main/res/layout/activity_login.xml
@@ -54,8 +54,7 @@
                 android:hint="Enter Email"
                 android:inputType="textEmailAddress"
                 android:drawablePadding="16dp"
-                android:padding="12dp"
-                android:layout_marginBottom="12dp" />
+                android:padding="12dp" />
 
             <EditText
                 android:text="@={viewmodel.password}"
@@ -65,7 +64,7 @@
                 android:inputType="textEmailAddress"
                 android:drawablePadding="16dp"
                 android:padding="12dp"
-                android:layout_marginBottom="12dp"/>
+                android:layout_marginVertical="12dp"/>
 
             <Button
                 android:id="@+id/btn_login"
