--- a/WebServiceTutorial/app/src/main/res/layout/address_book_fragment.xml
+++ b/WebServiceTutorial/app/src/main/res/layout/address_book_fragment.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.HomeFragment">
+    tools:context=".addressBook.AddressBookFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/address_book_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello to the Home Fragment" />
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/address_book_row"/>
 
 </FrameLayout>
