--- a/WebServiceTutorial/app/src/main/res/layout/profile_fragment.xml
+++ b/WebServiceTutorial/app/src/main/res/layout/profile_fragment.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.HomeFragment">
+    tools:context=".profile.ProfileFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello to the Home Fragment" />
+        android:text="Hello" />
 
 </FrameLayout>
